# regime-aware-portfolio-risk-engine

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
configs/: base.yaml
docs/: 0044-financial-metric-direction-rules.md  0045-investment-research-pipeline.md  cli.md  quality-checklist.md  release-checklist.md  reviewer-guide.md  thesis-analysis.md
docs/adr/: 0002-code-quality-tooling.md  0003-configuration-strategy.md  0004-assets-universe.md  0005-market-data-source.md  0006-return-calculation.md  0007-feature-window-selection.md  0008-correlation-feature-design.md  0009-feature-matrix-design.md  0010-baseline-regime-model.md  0011-probabilistic-regime-model.md  0012-regime-labeling-rules.md  0013-risk-metric-definitions.md  0014-regime-correlation-analysis.md  0015-risk-contribution-methodology.md  0016-static-benchmark-portfolio.md  0017-regime-allocation-policy.md  0018-allocation-constraints.md  0019-transaction-cost-assumptions.md  0020-backtest-return-engine.md  0021-strategy-comparison-framework.md  0022-backtest-diagnostics.md  0023-regime-conditioned-backtest-evaluation.md  0024-time-series-validation-splits.md  0025-regime-stability-diagnostics.md  0026-walk-forward-regime-validation.md  0027-regime-model-selection.md  0028-reporting-table-layer.md  0030-report-export-layer.md  0031-report-assembly-layer.md  0032-command-line-interface.md  0033-cli-report-export.md  0035-cli-config-inspections.md  0036-cli-demo-report-workflow.md  0037-cli-documentstion.md  0038-continuos-integration.md  0039-test-coverage.md  0040-quality-checklist.md  0041-release-versioning.md  0042-githib-collaboration-template.md  0043-investment-research-summary.md  (+46 more)
docs/examples/: README.md  advanced_research_memo_example.md  advanced_research_package_loader.md  advanced_research_package_manifest.md  advanced_research_package_summary.md  factor_significance_example.md  rolling_factor_exposure_example.md
docs/methodology/: rolling-factor-exposure.md
notebooks/: advanced_demo_walkthrough.ipynb
src/regime_aware_portfolio_risk_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/regime_risk_engine/: __init__.py  __main__.py  cli.py  cli_config.py  (+3 more)
src/regime_risk_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_advanced_cli_export.py  test_advanced_demo_cli.py  test_advanced_demo_factor_significance.py  test_advanced_demo_package_integrity.py  test_advanced_demo_reproducibility.py  test_advanced_demo_rolling_factor_exposure.py  test_advanced_demo_workflow.py  test_advanced_demo_workflow_cli.py  test_advanced_export_manifest.py  test_advanced_manifest_integrity.py  test_advanced_package_loader.py  test_advanced_package_loader_docs.py  test_advanced_package_manifest.py  test_advanced_package_manifest_cli.py  test_advanced_package_summary.py  test_advanced_package_summary_docs.py  test_advanced_research_demo.py  test_advanced_research_export.py  test_advanced_research_manifest_docs.py  test_advanced_research_memo.py  test_advanced_research_workflow.py  test_advanced_rolling_factor_exposure_integration.py  test_allocation_constraints.py  test_backtest_comparison.py  test_backtest_diagnostics.py  test_backtest_engine.py  test_cli.py  test_cli_config.py  test_cli_demo_report_inputs.py  test_cli_demo_report_workflow.py  test_cli_documentation.py  test_cli_report_export.py  test_config.py  test_correlation_features.py  test_crisis_windows.py  test_dashboard_app.py  test_dashboard_screenshot_docs.py  test_data_validation.py  test_documentation_qu  test_documentation_quality.py  (+54 more)
(+91 files in other folders)
