[project]
name = "regime-aware-portfolio-risk-engine"
version = "0.1.0"
description = "A regime-aware portfolio risk engine comparing static and dynamic allocation strategies."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Jimena Chinchilla" }
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "matplotlib",
    "pyyaml",
    "yfinance",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
    "types-PyYAML",
    "pytest-cov",
]

[tool.coverage.run]
branch = true
source = ["regime_risk_engine"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
regime-risk-engine = "regime_risk_engine.cli:main"